# docs/swagger.json
@@ -672,6 +672,27 @@
                 "responses": {}
             }
         },
+        "/system/delete": {
+            "delete": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "System"
+                ],
+                "summary": "删除系统配置",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {}
+            }
+        },
         "/system/list": {
             "get": {
                 "produces": [
@@ -699,6 +720,48 @@
                         "description": "page_size",
                         "name": "page_size",
                         "in": "query"
+                    }
+                ],
+                "responses": {}
+            }
+        },
+        "/system/update": {
+            "put": {
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "System"
+                ],
+                "summary": "更新系统配置",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "id",
+                        "name": "id",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "sys_name",
+                        "name": "sys_name",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "sys_value",
+                        "name": "sys_value",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "sys_type",
+                        "name": "sys_type",
+                        "in": "formData",
+                        "required": true
                     }
                 ],
                 "responses": {}
